Upgrade to Laravel 10

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         {
             "name": "Yassen Sayed",
             "email": "devysm2019@gmail.com",
-            "homepage": "www.yassensayed.com",
+            "homepage": "https://www.yassensayed.com",
             "role": "Maintainer"
         },
         {
