Upgrade to Laravel 10

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
         }
     ],
     "require": {
-        "php": ">=8.1",
-        "illuminate/translation": "~9"
+        "php": ">=8.1"
     },
     "autoload": {
         "psr-4": {
