Upgrade to Laravel 10

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         },
         {
             "name": "Muhammed Efe Çetin",
-            "email": "efectn@protonmail.com",
+            "email": "DevYSM@protonmail.com",
             "homepage": "https://6tel.net",
             "role": "Maintainer"
         },
