--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         }
     ],
     "require": {
-        "php": ">=8.1"
+        "php": "~5.4|~5.5|5.6|~7.0|~7.1|^7.2|^7.3|^7.4|^8.0|^8.1",
+        "illuminate/support": "~5.5.40|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
