--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,14 @@
 {
     "name": "efectn/laravel-menu-builder",
-    "description": " Wordpress like drag & drop menu builder for Laravel 9.x ",
+    "description": " Wordpress like drag & drop menu builder for Laravel 9.x, 10.x and 11.x",
     "keywords": ["Laravel", "Menu", "Wordpress", "Builder", "Drag and Drop"],
-    "authors": [
-        {
+    "authors": [{
             "name": "Muhammed Efe Çetin",
             "email": "efectn@protonmail.com",
             "homepage": "https://6tel.net",
             "role": "Maintainer"
         },
-    	{
+        {
             "name": "Rendy Harimayco",
             "email": "rendyharimayco@gmail.com",
             "role": "Original Developer"
@@ -17,16 +16,16 @@
         {
             "name": "Cristian Garcia",
             "email": "informacion@cristiangarcia.co",
-            "role" : "Original Developer"
+            "role": "Original Developer"
         }
     ],
     "require": {
         "php": ">=8.0",
-        "illuminate/translation": "~9 || ~10"
+        "illuminate/translation": "~9 || ~10 || ~11"
     },
     "autoload": {
         "psr-4": {
-          "Efectn\\Menu\\": "src/"
+            "Efectn\\Menu\\": "src/"
         }
     },
     "extra": {
